// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GhostPropertiesPanel renders 1`] = `
<div
  className="m-ghost-properties-panel"
>
  <div
    className="m-properties-panel__header"
  >
    <div
      className="m-properties-panel__label"
    >
      <svg
        style={
          Object {
            "height": 64,
            "width": 64,
          }
        }
        viewBox="-32 -20 64 64"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--large ghost"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={24}
            rx={12}
            ry={12}
            width={64}
            x={-32}
            y={19}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={31}
          >
            0123
          </text>
          <g
            transform="scale(0.7) translate(-24,-23)"
          >
            <path
              className="m-vehicle-icon__ghost-highlight"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
            <path
              className="m-vehicle-icon__ghost-body"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
          </g>
          <text
            className="m-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={8}
          >
            X
          </text>
        </g>
      </svg>
    </div>
    <div
      className="m-properties-panel__variant"
    >
      <div
        className="m-properties-panel__inbound-outbound"
      >
        Outbound
      </div>
      <div
        className="m-route-variant-name"
      >
        <span
          className="m-route-variant-name__route-id"
        >
          39_X
        </span>
         headsign
      </div>
    </div>
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-ghost-properties-panel__no-waiver-banner"
  >
    <div
      className="m-ghost-properties-panel__no-waiver-banner-header"
    >
      <span
        className="m-ghost-properties-panel__no-waiver-banner-alert-icon"
      >
        <svg
          className="c-icon-alert-circle"
          viewBox="-3 -3 54 54"
        >
          <g
            className="c-icon-alert-circle--highlighted"
          >
            <circle
              className="c-icon-alert-circle__outline"
              cx="24"
              cy="24"
              r="27"
            />
            <circle
              className="c-icon-alert-circle__fill"
              cx="24"
              cy="24"
              r="22.59"
            />
            <g
              className="c-icon-alert-circle__exclamation-point"
            >
              <path
                d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
              />
              <path
                d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
              />
            </g>
          </g>
        </svg>
      </span>
      <div
        className="m-ghost-properties-panel__no-waiver-banner-title"
      >
        Unknown Ghost Bus - No Dispatcher Note
      </div>
    </div>
    A ghost bus or dropped trip has been automatically detected on this route. Please follow up with dispatch as needed, if a Dispatcher Note is generated - it will appear here.
  </div>
  <div
    className="m-tabs"
  >
    <div
      className="m-tabs__tabs"
      data-tabs={true}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <ul
        className="m-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-1"
          aria-disabled="false"
          aria-selected="true"
          className="m-tabs__tab m-tabs__tab--selected"
          id="react-tabs-0"
          role="tab"
          tabIndex="0"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Status
        </li>
        <li
          aria-controls="react-tabs-3"
          aria-disabled="false"
          aria-selected="false"
          className="m-tabs__tab"
          id="react-tabs-2"
          role="tab"
          tabIndex={null}
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Run
        </li>
        <li
          aria-controls="react-tabs-5"
          aria-disabled="false"
          aria-selected="false"
          className="m-tabs__tab"
          id="react-tabs-4"
          role="tab"
          tabIndex={null}
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Block
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-0"
        className="m-tabs__tab-panel m-tabs__tab-panel--selected"
        id="react-tabs-1"
        role="tabpanel"
      >
        <div
          className="m-properties-list"
        >
          <table
            className="m-properties-list__table"
          >
            <tbody>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Run
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  123-0123
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        aria-labelledby="react-tabs-2"
        className="m-tabs__tab-panel"
        id="react-tabs-3"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-4"
        className="m-tabs__tab-panel"
        id="react-tabs-5"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`GhostPropertiesPanel renders ghost with block waivers 1`] = `
<div
  className="m-ghost-properties-panel"
>
  <div
    className="m-properties-panel__header"
  >
    <div
      className="m-properties-panel__label"
    >
      <svg
        style={
          Object {
            "height": 64,
            "width": 64,
          }
        }
        viewBox="-32 -20 64 64"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--large ghost"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={24}
            rx={12}
            ry={12}
            width={64}
            x={-32}
            y={19}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={31}
          >
            0123
          </text>
          <g
            transform="scale(0.7) translate(-24,-23)"
          >
            <path
              className="m-vehicle-icon__ghost-highlight"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
            <path
              className="m-vehicle-icon__ghost-body"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
          </g>
          <text
            className="m-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={8}
          >
            X
          </text>
        </g>
      </svg>
    </div>
    <div
      className="m-properties-panel__variant"
    >
      <div
        className="m-properties-panel__inbound-outbound"
      >
        
      </div>
      <div
        className="m-route-variant-name"
      >
        <span
          className="m-route-variant-name__route-id"
        >
          39_X
        </span>
         headsign
      </div>
    </div>
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-block-waiver-list"
  >
    <div
      className="m-block-waiver-banner m-block-waiver-banner--past"
    >
      <div
        className="m-block-waiver-banner__header"
      >
        <span
          className="m-block-waiver-banner__alert-icon"
        >
          <svg
            className="c-icon-alert-circle"
            viewBox="-3 -3 54 54"
          >
            <g
              className="c-icon-alert-circle--grey-on-grey"
            >
              <circle
                className="c-icon-alert-circle__outline"
                cx="24"
                cy="24"
                r="27"
              />
              <circle
                className="c-icon-alert-circle__fill"
                cx="24"
                cy="24"
                r="22.59"
              />
              <g
                className="c-icon-alert-circle__exclamation-point"
              >
                <path
                  d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
                />
                <path
                  d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
                />
              </g>
            </g>
          </svg>
        </span>
        <div
          className="m-block-waiver-banner__title"
        >
          Dispatcher Note - 
          Past
        </div>
      </div>
      <table
        className="m-block-waiver-banner__details"
      >
        <tbody>
          <tr>
            <td
              className="m-block-waiver-banner__detail-label m-block-waiver-banner__reason"
              data-event="click"
              data-for="reason"
              data-tip={true}
            >
              Reason 
              <span
                className="m-block-waiver-banner__reason-icon"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </td>
            <td
              className="m-block-waiver-banner__detail-value"
            >
              E:1106
            </td>
          </tr>
          <tr>
            <td
              className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--start-time"
            >
              Start Time
            </td>
            <td
              className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--start-time"
            >
              5:05am
            </td>
          </tr>
          <tr>
            <td
              className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--end-time"
            >
              End Time
            </td>
            <td
              className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--end-time"
            >
              12:38pm
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="mock-react-tooltip"
      />
    </div>
  </div>
  <div
    className="m-tabs"
  >
    <div
      className="m-tabs__tabs"
      data-tabs={true}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <ul
        className="m-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-13"
          aria-disabled="false"
          aria-selected="true"
          className="m-tabs__tab m-tabs__tab--selected"
          id="react-tabs-12"
          role="tab"
          tabIndex="0"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Status
        </li>
        <li
          aria-controls="react-tabs-15"
          aria-disabled="false"
          aria-selected="false"
          className="m-tabs__tab"
          id="react-tabs-14"
          role="tab"
          tabIndex={null}
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Run
        </li>
        <li
          aria-controls="react-tabs-17"
          aria-disabled="false"
          aria-selected="false"
          className="m-tabs__tab"
          id="react-tabs-16"
          role="tab"
          tabIndex={null}
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Block
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-12"
        className="m-tabs__tab-panel m-tabs__tab-panel--selected"
        id="react-tabs-13"
        role="tabpanel"
      >
        <div
          className="m-properties-list"
        >
          <table
            className="m-properties-list__table"
          >
            <tbody>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Run
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  123-0123
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        aria-labelledby="react-tabs-14"
        className="m-tabs__tab-panel"
        id="react-tabs-15"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-16"
        className="m-tabs__tab-panel"
        id="react-tabs-17"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`GhostPropertiesPanel renders ghost with missing run 1`] = `
<div
  className="m-ghost-properties-panel"
>
  <div
    className="m-properties-panel__header"
  >
    <div
      className="m-properties-panel__label"
    >
      <svg
        style={
          Object {
            "height": 64,
            "width": 64,
          }
        }
        viewBox="-32 -20 64 64"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--large ghost"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={24}
            rx={12}
            ry={12}
            width={64}
            x={-32}
            y={19}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={31}
          >
            N/A
          </text>
          <g
            transform="scale(0.7) translate(-24,-23)"
          >
            <path
              className="m-vehicle-icon__ghost-highlight"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
            <path
              className="m-vehicle-icon__ghost-body"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
          </g>
          <text
            className="m-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={8}
          >
            X
          </text>
        </g>
      </svg>
    </div>
    <div
      className="m-properties-panel__variant"
    >
      <div
        className="m-properties-panel__inbound-outbound"
      >
        Outbound
      </div>
      <div
        className="m-route-variant-name"
      >
        <span
          className="m-route-variant-name__route-id"
        >
          39_X
        </span>
         headsign
      </div>
    </div>
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-ghost-properties-panel__no-waiver-banner"
  >
    <div
      className="m-ghost-properties-panel__no-waiver-banner-header"
    >
      <span
        className="m-ghost-properties-panel__no-waiver-banner-alert-icon"
      >
        <svg
          className="c-icon-alert-circle"
          viewBox="-3 -3 54 54"
        >
          <g
            className="c-icon-alert-circle--highlighted"
          >
            <circle
              className="c-icon-alert-circle__outline"
              cx="24"
              cy="24"
              r="27"
            />
            <circle
              className="c-icon-alert-circle__fill"
              cx="24"
              cy="24"
              r="22.59"
            />
            <g
              className="c-icon-alert-circle__exclamation-point"
            >
              <path
                d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
              />
              <path
                d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
              />
            </g>
          </g>
        </svg>
      </span>
      <div
        className="m-ghost-properties-panel__no-waiver-banner-title"
      >
        Unknown Ghost Bus - No Dispatcher Note
      </div>
    </div>
    A ghost bus or dropped trip has been automatically detected on this route. Please follow up with dispatch as needed, if a Dispatcher Note is generated - it will appear here.
  </div>
  <div
    className="m-tabs"
  >
    <div
      className="m-tabs__tabs"
      data-tabs={true}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <ul
        className="m-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-7"
          aria-disabled="false"
          aria-selected="true"
          className="m-tabs__tab m-tabs__tab--selected"
          id="react-tabs-6"
          role="tab"
          tabIndex="0"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Status
        </li>
        <li
          aria-controls="react-tabs-9"
          aria-disabled="false"
          aria-selected="false"
          className="m-tabs__tab"
          id="react-tabs-8"
          role="tab"
          tabIndex={null}
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Run
        </li>
        <li
          aria-controls="react-tabs-11"
          aria-disabled="false"
          aria-selected="false"
          className="m-tabs__tab"
          id="react-tabs-10"
          role="tab"
          tabIndex={null}
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Block
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-6"
        className="m-tabs__tab-panel m-tabs__tab-panel--selected"
        id="react-tabs-7"
        role="tabpanel"
      >
        <div
          className="m-properties-list"
        >
          <table
            className="m-properties-list__table"
          >
            <tbody>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Run
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  Not Available
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        aria-labelledby="react-tabs-8"
        className="m-tabs__tab-panel"
        id="react-tabs-9"
        role="tabpanel"
      />
      <div
        aria-labelledby="react-tabs-10"
        className="m-tabs__tab-panel"
        id="react-tabs-11"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;
